feat: [#183039108] remove multiple collection item inside a collection
